fixing dropdown on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -135,8 +135,8 @@ header ul.main-menu .dropdown-list {
 header ul.main-menu .dropdown-list li {
     line-height: 35px;
 }
-.dropdown-list.open-dropdown {
-    display: block !important;
+header ul.main-menu .dropdown-list.open-dropdown {
+    display: block;
 }
 
 @media (min-width: 780px) {
@@ -174,6 +174,9 @@ header ul.main-menu .dropdown-list li {
     }
     header ul.main-menu .dropdown-list li {
         line-height: 60px;
+    }
+    header ul.main-menu .dropdown-list.open-dropdown {
+        display: none;
     }
 }
 
@@ -504,6 +507,10 @@ input[type="email"]:focus {
     }
     .modal h2 {
         margin: 0;
+    }
+    input[type="email"] {
+        max-width: 250px;
+        min-width: auto;
     }
 }
 
